# CV-Rank-Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
samples/: jobs.json
src/cv_rank_agent/: __init__.py  __main__.py  config.py  graph.py  models.py  state.py
src/cv_rank_agent/nodes/: cv_parser.py  embedder.py  job_parser.py  scorer.py
src/cv_rank_agent/prompts/: cv_parser.py  job_parser.py  scorer.py
src/cv_rank_agent/tools/: file_load.py  web_crawl.py
tests/: __init__.py  test_cv_parser.py  test_embedder.py  test_job_parser.py  test_scorer.py
